# backdoor-toolbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: config.py  configs.py  main.py
src/backdoor_toolbox/: config.py  main.py  routine.py
src/backdoor_toolbox/datasets/: cifar10.py  gtsrb.py  mnist.py
src/backdoor_toolbox/models/cnn/: mobilenet_wrapper.py  resnet18.py  resnet_wrapper.py
src/backdoor_toolbox/routines/: base.py
src/backdoor_toolbox/routines/attacks/multi_attack/: config.py  multi_attack.py
src/backdoor_toolbox/routines/attacks/quantization_attack/: config.py  quantization_attack.py
src/backdoor_toolbox/routines/defenses/ensemble_learning/: config.py  ensemble_learning.py
src/backdoor_toolbox/routines/defenses/knowledge_distillation/: config.py  knowledge_distillation.py
src/backdoor_toolbox/routines/neutral/: config.py  neutral.py
src/backdoor_toolbox/triggers/: target_transform.py  transform.py
src/backdoor_toolbox/triggers/transform/: base.py  transform.py
src/backdoor_toolbox/utils/: dataset.py  inspectors.py  logger.py  losses.py  metrics.py  stats.py
src/datasets/: mnist.py
src/models/cnn/: resnet18.py
src/routines/: clean.py
src/routines/attacks/: quantization_attack.py
src/triggers/: target_transform.py  transform.py
src/utils/: logger.py  metrics.py
